service-mesh/_k8s/99_ingressgateway.yaml
# ##################################################################################################
# # Services
# ##################################################################################################
# ---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: services
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: public-http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - website-ui.aimerzarashi.com
    - website-smtp.aimerzarashi.com
    - authz-api.aimerzarashi.com
    - database-pgadmin.aimerzarashi.com
  - port:
      number: 443
      name: public-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-credential-aimerzarashi.com
    hosts:
    - website-ui.aimerzarashi.com
    - website-smtp.aimerzarashi.com
    - authz-api.aimerzarashi.com
    - database-pgadmin.aimerzarashi.com
