service-mesh/_k8s/80_database-pgadmin.yaml
##################################################################################################
# database-pgadmin
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: database-pgadmin
spec:
  hosts:
    - database-pgadmin.aimerzarashi.com
  gateways:
    - services
  http:
  - route:
    - destination:
        host:
          database-pgadmin.services.svc.cluster.local
        port:
          number: 80
