service-mesh/_k8s/80_iam-provider.yaml
##################################################################################################
# iam-provider
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iam-provider
spec:
  hosts:
    - iam-provider.aimerzarashi.com
  gateways:
    - services
  http:
    - route:
        - destination:
            host: iam-provider.services.svc.cluster.local
            port:
              number: 8080
