service-mesh/_k8s/80_website-ui.yaml
##################################################################################################
# website-ui
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website-ui
spec:
  hosts:
    - website-ui.aimerzarashi.com
  gateways:
    - services
  http:
  - route:
    - destination:
        host:
          website-ui.services.svc.cluster.local
        port:
          number: 3000
