service-mesh/_k8s/81_website-smtp.yaml
##################################################################################################
# authn-smtp
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website-smtp
spec:
  hosts:
    - website-smtp.aimerzarashi.com
  gateways:
    - services
  http:
    - route:
        - destination:
            host: website-smtp.services.svc.cluster.local
            port:
              number: 8025
