service-mesh/_k8s/82_authz-api.yaml
##################################################################################################
# authz-api
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authz-api
spec:
  hosts:
    - authz-api.aimerzarashi.online
  gateways:
    - services
  http:
  - route:
    - destination:
        host:
          authz-api.services.svc.cluster.local
        port:
          number: 3000
